# icon-gradients

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml
resources/shaders/: linear_gradient.fsh  linear_gradient_blend.fsh  linear_gradient_line.fsh  radial_gradient.fsh  radial_gradient_blend.fsh  radial_gradient_line.fsh
src/: Includes.hpp  extra_nodes.cpp  extra_nodes.hpp  gradient_layer.cpp  gradient_layer.hpp  includes.hpp  main copy.cpp  main.cpp  points_layer.cpp  points_layer.hpp  utils.cpp  utils.hpp
src/Hooks/: CharacterColorPage.cpp  CharacterColorPage.hpp  CommentCell.cpp  CommentCell.hpp  GJGarageLayer.cpp  GJGarageLayer.hpp  GJLevelScoreCell.cpp  GJLevelScoreCell.hpp  ItemInfoPopup.cpp  ItemInfoPopup.hpp  MenuGameLayer.cpp  MenuGameLayer.hpp  MenuLayer.cpp  MenuLayer.hpp  PlayLayer.cpp  PlayLayer.hpp  PlayerObject.cpp  PlayerObject.hpp  ProfilePage.cpp  ProfilePage.hpp  SimplePlayer.cpp  SimplePlayer.hpp
src/UI/: ColorNode.cpp  ColorNode.hpp  ColorPicker.cpp  ColorPicker.hpp  ColorSelectLayer.cpp  ColorSelectLayer.hpp  ColorToggle.cpp  ColorToggle.hpp  GradientLayer.cpp  GradientLayer.hpp  IconButton.cpp  IconButton.hpp  LoadLayer.cpp  LoadLayer.hpp  PlayerToggle.cpp  PlayerToggle.hpp  PointsLayer.cpp  PointsLayer.hpp
src/Utils/: Cache.cpp  Cache.hpp  Utils.cpp  Utils.hpp
